Fixed bug #71622 (Strings used in pass-as-reference cannot be used to invoke C::$callable())